global score added

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -64,12 +64,13 @@
     <Compile Include="Assets\Scripts\Bullet\BulletDamageHandler.cs" />
     <Compile Include="Assets\Scripts\Bullet\BulletMove.cs" />
     <Compile Include="Assets\Scripts\Bullet\SelfDestruct.cs" />
+    <Compile Include="Assets\Scripts\CurrentScore.cs" />
     <Compile Include="Assets\Scripts\HighScore\HighScore.cs" />
     <Compile Include="Assets\Scripts\HighScore\HighScore2test.cs" />
     <Compile Include="Assets\Scripts\HighScore\HighScore3test.cs" />
     <Compile Include="Assets\Scripts\HighScore\HighScore4test.cs" />
     <Compile Include="Assets\Scripts\HighScore\HighScore5test.cs" />
-    <Compile Include="Assets\Scripts\HighScore\Score2.cs" />
+    <Compile Include="Assets\Scripts\HighScore\Score.cs" />
     <Compile Include="Assets\Scripts\LoadSceneOnClick.cs" />
     <Compile Include="Assets\Scripts\Monster\FacePlayer.cs" />
     <Compile Include="Assets\Scripts\Monster\MonsterDamageHandler.cs" />
@@ -79,12 +80,12 @@
     <Compile Include="Assets\Scripts\PauseMenu\DisablePause.cs" />
     <Compile Include="Assets\Scripts\PauseMenu\EnablePause.cs" />
     <Compile Include="Assets\Scripts\PauseMenu\Pause.cs" />
+    <Compile Include="Assets\Scripts\Player\CalculateScore.cs" />
     <Compile Include="Assets\Scripts\Player\LevelDetector.cs" />
     <Compile Include="Assets\Scripts\Player\PlayerDamageHandler.cs" />
     <Compile Include="Assets\Scripts\Player\PlayerMove.cs" />
     <Compile Include="Assets\Scripts\Player\PlayerShoot.cs" />
     <Compile Include="Assets\Scripts\Player\PlayerSpawner.cs" />
-    <Compile Include="Assets\Scripts\Player\Score.cs" />
     <Compile Include="Assets\Scripts\Powerup\PowerupHandler.cs" />
     <Compile Include="Assets\Scripts\QuitOnClick.cs" />
     <Compile Include="Assets\Scripts\Textures\CameraFollow.cs" />
