--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -53,6 +53,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\Scripts\AnimationSpeed.cs" />
      <Compile Include="Assets\Scripts\Balloon\BalloonHandler.cs" />
      <Compile Include="Assets\Scripts\Bullet\BulletDamageHandler.cs" />
      <Compile Include="Assets\Scripts\Bullet\BulletMove.cs" />
